name:                toggl
version:             0.1.0.0
synopsis:            Simple CLI for Toggl
homepage:            http://github.com/eraserhd/toggl
license:             GPL-2
license-file:        LICENSE
author:              Jason Felice
maintainer:          jason.m.felice@gmail.com
category:            Network
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10


executable toggl
  main-is:             Main.hs
  build-depends:       base >=4.9 && <4.10,
                       bytestring >= 0.10 && <0.11,
                       aeson >= 1.2 && <1.3,
                       http-conduit >= 2.2 && <2.3,
                       time >= 1.6 && <1.7
  default-language:    Haskell2010

  -- Modules included in this executable, other than Main.
  -- other-modules:       
  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:    
